force-app/main/default/objects/Industry_Profile__c/fields/Current_Booking_Engine_Provider_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Current_Booking_Engine_Provider_Hotel__c</fullName>
    <label>Current Booking Engine Provider (Hotel)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abuzz</fullName>
            </value>
            <value>
                <fullName>Ariane</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>Micros</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>