force-app/main/default/objects/Industry_Profile__c/fields/Custom_Rolls__c.field-meta.xml
<CustomField>
    <fullName>Custom_Rolls__c</fullName>
    <label>Custom Rolls</label>
    <type>TextArea</type>
</CustomField>