force-app/main/default/objects/Industry_Profile__c/fields/Customer_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segmentation__c</fullName>
    <formula>Text( Account_Linkage__r.Customer_Segmentation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Segmentation</label>
    <type>Text</type>
</CustomField>