force-app/main/default/objects/Industry_Profile__c/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <inlineHelpText>Company annual sales revenue in $USD</inlineHelpText>
    <label>Customer Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1 ($2B+)</fullName>
            </value>
            <value>
                <fullName>Tier 2 ($1B-$2B)</fullName>
            </value>
            <value>
                <fullName>Tier 3 ($500m-$1B)</fullName>
            </value>
            <value>
                <fullName>Tier 4 ($100m-$500m)</fullName>
            </value>
            <value>
                <fullName>Tier 5 (&lt;$100m)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>