force-app/main/default/objects/Industry_Profile__c/fields/DDK_NCR__c.field-meta.xml
<CustomField>
    <fullName>DDK_NCR__c</fullName>
    <label>DDK_NCR</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>