force-app/main/default/objects/Industry_Profile__c/fields/Dedicated_Payment_Terminals__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Payment_Terminals__c</fullName>
    <label>Dedicated Payment Terminals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Azkoyen</fullName>
            </value>
            <value>
                <fullName>Diebold</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Wincor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>