force-app/main/default/objects/Industry_Profile__c/fields/Deposit_Image_Capture_Comments__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Image_Capture_Comments__c</fullName>
    <label>Deposit Image Capture Comments</label>
    <length>200</length>
    <type>Text</type>
</CustomField>