force-app/main/default/objects/Industry_Profile__c/fields/Digital_Signage_Status__c.field-meta.xml
<CustomField>
    <fullName>Digital_Signage_Status__c</fullName>
    <inlineHelpText>Select the choice which most closely characterizes this accounts status in deploying digital signage in their branches.</inlineHelpText>
    <label>Digital Signage - Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>In Pilot</fullName>
            </value>
            <value>
                <fullName>In Evaluation</fullName>
            </value>
            <value>
                <fullName>No activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>