force-app/main/default/objects/Industry_Profile__c/fields/Dock_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Dock_Scheduling__c</fullName>
    <label>Dock Scheduling</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blue Sky (LMS)</fullName>
            </value>
            <value>
                <fullName>C-3</fullName>
            </value>
            <value>
                <fullName>In house</fullName>
            </value>
            <value>
                <fullName>Lean Logistics</fullName>
            </value>
            <value>
                <fullName>Manhattan</fullName>
            </value>
            <value>
                <fullName>One Network</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Red Prarie</fullName>
            </value>
            <value>
                <fullName>Retalix RDS</fullName>
            </value>
            <value>
                <fullName>Retalix RDS (Legacy)</fullName>
            </value>
            <value>
                <fullName>Not Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>