force-app/main/default/objects/Industry_Profile__c/fields/Driver_Delivery_Automation__c.field-meta.xml
<CustomField>
    <fullName>Driver_Delivery_Automation__c</fullName>
    <label>Driver / Delivery Automation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airclic</fullName>
            </value>
            <value>
                <fullName>JDA</fullName>
            </value>
            <value>
                <fullName>Retalix Power Delivery</fullName>
            </value>
            <value>
                <fullName>SAE</fullName>
            </value>
            <value>
                <fullName>Not Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>