force-app/main/default/objects/Industry_Profile__c/fields/DVD_Kiosk__c.field-meta.xml
<CustomField>
    <fullName>DVD_Kiosk__c</fullName>
    <label>DVD Kiosk</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coinstar/Redbox</fullName>
            </value>
            <value>
                <fullName>GlobalAxcess</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>