force-app/main/default/objects/Industry_Profile__c/fields/EasyPoint_Series__c.field-meta.xml
<CustomField>
    <fullName>EasyPoint_Series__c</fullName>
    <label>EasyPoint Series</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>