force-app/main/default/objects/Industry_Profile__c/fields/Ecommerce_host__c.field-meta.xml
<CustomField>
    <fullName>Ecommerce_host__c</fullName>
    <label>Ecommerce host</label>
    <length>100</length>
    <type>Text</type>
</CustomField>