force-app/main/default/objects/Industry_Profile__c/fields/Email_Marketing_Provider__c.field-meta.xml
<CustomField>
    <fullName>Email_Marketing_Provider__c</fullName>
    <label>Email Marketing Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acxiom</fullName>
            </value>
            <value>
                <fullName>Alterian</fullName>
            </value>
            <value>
                <fullName>Blue Hornet</fullName>
            </value>
            <value>
                <fullName>ClickSquared</fullName>
            </value>
            <value>
                <fullName>Datran Media</fullName>
            </value>
            <value>
                <fullName>e-Dialog</fullName>
            </value>
            <value>
                <fullName>Emailvision</fullName>
            </value>
            <value>
                <fullName>Epsilon</fullName>
            </value>
            <value>
                <fullName>ExacTarget</fullName>
            </value>
            <value>
                <fullName>Experian CheetahMail</fullName>
            </value>
            <value>
                <fullName>Lyris</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Responsys</fullName>
            </value>
            <value>
                <fullName>Silverpop</fullName>
            </value>
            <value>
                <fullName>Yesmail</fullName>
            </value>
            <value>
                <fullName>ZetaInteractive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>