force-app/main/default/objects/Industry_Profile__c/fields/eMarketing__c.field-meta.xml
<CustomField>
    <fullName>eMarketing__c</fullName>
    <inlineHelpText>Solutions to deliver and manage on-line marketing programs and campaigns.</inlineHelpText>
    <label>eMarketing</label>
    <length>200</length>
    <type>Text</type>
</CustomField>