force-app/main/default/objects/Industry_Profile__c/fields/ERP_Financials_HR__c.field-meta.xml
<CustomField>
    <fullName>ERP_Financials_HR__c</fullName>
    <label>ERP / Financials</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Debs</fullName>
            </value>
            <value>
                <fullName>DTS</fullName>
            </value>
            <value>
                <fullName>H &amp; S</fullName>
            </value>
            <value>
                <fullName>Homegrown</fullName>
            </value>
            <value>
                <fullName>IBS</fullName>
            </value>
            <value>
                <fullName>Infor</fullName>
            </value>
            <value>
                <fullName>JDA</fullName>
            </value>
            <value>
                <fullName>JD Edwards (Oracle)</fullName>
            </value>
            <value>
                <fullName>JIWA</fullName>
            </value>
            <value>
                <fullName>Lawson</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics</fullName>
            </value>
            <value>
                <fullName>Microsoft Great Plains</fullName>
            </value>
            <value>
                <fullName>Microsoft Navision</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PE V1</fullName>
            </value>
            <value>
                <fullName>PE V2</fullName>
            </value>
            <value>
                <fullName>PE V3.0</fullName>
            </value>
            <value>
                <fullName>PE V3.1</fullName>
            </value>
            <value>
                <fullName>PE V3.2</fullName>
            </value>
            <value>
                <fullName>PE V4</fullName>
            </value>
            <value>
                <fullName>PE V4.1</fullName>
            </value>
            <value>
                <fullName>Produce Pro</fullName>
            </value>
            <value>
                <fullName>Ross</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Silver Creek</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>VAI</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>PE V5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>