force-app/main/default/objects/Industry_Profile__c/fields/Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The sales management sponsor of the account for Hospitality.</inlineHelpText>
    <label>Executive Sponsor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.UserType</field>
            <operation>notEqual</operation>
            <value>Partner</value>
        </filterItems>
        <infoMessage>Only Active Users will be displayed here.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Industry_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>