force-app/main/default/objects/Industry_Profile__c/fields/Fanfold_paper__c.field-meta.xml
<CustomField>
    <fullName>Fanfold_paper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fanfold paper?</label>
    <type>Checkbox</type>
</CustomField>