force-app/main/default/objects/Industry_Profile__c/fields/First_Line_Maintenance_02__c.field-meta.xml
<CustomField>
    <fullName>First_Line_Maintenance_02__c</fullName>
    <label>First Line Maintenance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>Wincor</fullName>
            </value>
            <value>
                <fullName>Diebold</fullName>
            </value>
            <value>
                <fullName>Other-OEM</fullName>
            </value>
            <value>
                <fullName>Other-3rd Party</fullName>
            </value>
            <value>
                <fullName>Other-CIT</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>