force-app/main/default/objects/Industry_Profile__c/fields/FLM_Vendors_Supporting_Own_ATMs__c.field-meta.xml
<CustomField>
    <fullName>FLM_Vendors_Supporting_Own_ATMs__c</fullName>
    <inlineHelpText>Identify the vendors that are supporting their own units.</inlineHelpText>
    <label>FLM: Vendors Supporting Own ATMs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>Wincor</fullName>
            </value>
            <value>
                <fullName>Diebold</fullName>
            </value>
            <value>
                <fullName>Hyosung</fullName>
            </value>
            <value>
                <fullName>GRG</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>