force-app/main/default/objects/Industry_Profile__c/fields/Fuel__c.field-meta.xml
<CustomField>
    <fullName>Fuel__c</fullName>
    <label>Fuel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DOMS</fullName>
            </value>
            <value>
                <fullName>Excentus</fullName>
            </value>
            <value>
                <fullName>Fuel (Commercial)</fullName>
            </value>
            <value>
                <fullName>Fuel Allied</fullName>
            </value>
            <value>
                <fullName>Fuel RFS</fullName>
            </value>
            <value>
                <fullName>hTech</fullName>
            </value>
            <value>
                <fullName>Retalix Fuel</fullName>
            </value>
            <value>
                <fullName>Tokheim</fullName>
            </value>
            <value>
                <fullName>Torex</fullName>
            </value>
            <value>
                <fullName>Wayne</fullName>
            </value>
            <value>
                <fullName>Not Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>