force-app/main/default/objects/Industry_Profile__c/fields/Home_Consumer_Image_Capture__c.field-meta.xml
<CustomField>
    <fullName>Home_Consumer_Image_Capture__c</fullName>
    <label>Home Consumer Image Capture</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>