force-app/main/default/objects/Industry_Profile__c/fields/Home_Consumer_Internet_Capture_Status__c.field-meta.xml
<CustomField>
    <fullName>Home_Consumer_Internet_Capture_Status__c</fullName>
    <inlineHelpText>For image capture offered to customers by using a home scanner and browser application.</inlineHelpText>
    <label>Home Consumer Internet Capture: Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>In Pilot</fullName>
            </value>
            <value>
                <fullName>In Evaluation</fullName>
            </value>
            <value>
                <fullName>No activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>