force-app/main/default/objects/Industry_Profile__c/fields/Hotel_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Customer_Type__c</fullName>
    <label>Hotel Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brand/Franchise</fullName>
            </value>
            <value>
                <fullName>Operator</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>