force-app/main/default/objects/Industry_Profile__c/fields/HQ_Hosting_Item_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>HQ_Hosting_Item_Maintenance__c</fullName>
    <label>HQ, Hosting &amp; Item Maintenance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acorn</fullName>
            </value>
            <value>
                <fullName>Aldata</fullName>
            </value>
            <value>
                <fullName>BR Data</fullName>
            </value>
            <value>
                <fullName>Factor</fullName>
            </value>
            <value>
                <fullName>HOST (C-Store-Legacy HQC)</fullName>
            </value>
            <value>
                <fullName>HQC(C-Store)</fullName>
            </value>
            <value>
                <fullName>HQC (Tool Kit)</fullName>
            </value>
            <value>
                <fullName>In-house</fullName>
            </value>
            <value>
                <fullName>JDA</fullName>
            </value>
            <value>
                <fullName>MWS (Storepoint-PDI Enviroment)</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>PDI</fullName>
            </value>
            <value>
                <fullName>Pinnacle</fullName>
            </value>
            <value>
                <fullName>Radiant</fullName>
            </value>
            <value>
                <fullName>Red Prairie</fullName>
            </value>
            <value>
                <fullName>Retalix HQ</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Softechnics</fullName>
            </value>
            <value>
                <fullName>Tomax - Retail.net</fullName>
            </value>
            <value>
                <fullName>Not Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>