force-app/main/default/objects/Industry_Profile__c/fields/IDN_or_Parent_Name_if_not_parent__c.field-meta.xml
<CustomField>
    <fullName>IDN_or_Parent_Name_if_not_parent__c</fullName>
    <inlineHelpText>Please provide name of the Parent or IDN for this customer, if not the parent</inlineHelpText>
    <label>IDN or Parent Name (if not parent)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>