force-app/main/default/objects/Industry_Profile__c/fields/If_other_mobility_please_specify__c.field-meta.xml
<CustomField>
    <fullName>If_other_mobility_please_specify__c</fullName>
    <inlineHelpText>If other mobile functionality, please specify</inlineHelpText>
    <label>If other mobility, please specify</label>
    <length>50</length>
    <type>Text</type>
</CustomField>