force-app/main/default/objects/Industry_Profile__c/fields/If_Other_Please_Specify__c.field-meta.xml
<CustomField>
    <fullName>If_Other_Please_Specify__c</fullName>
    <inlineHelpText>If additional SW features, please specify</inlineHelpText>
    <label>If Other, Please Specify</label>
    <length>50</length>
    <type>Text</type>
</CustomField>