force-app/main/default/objects/Industry_Profile__c/fields/Image_Software_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Image_Software_Vendor__c</fullName>
    <label>Image Software Vendor</label>
    <length>25</length>
    <type>Text</type>
</CustomField>