force-app/main/default/objects/Industry_Profile__c/fields/Invoice_Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Reconciliation__c</fullName>
    <label>Invoice Reconciliation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-house</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Retalix Invoice Reconciliation</fullName>
            </value>
            <value>
                <fullName>Retalix Prompt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>