force-app/main/default/objects/Industry_Profile__c/fields/KDS_Provider__c.field-meta.xml
<CustomField>
    <fullName>KDS_Provider__c</fullName>
    <label>KDS Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>