force-app/main/default/objects/Industry_Profile__c/fields/Kiosk_functionality_deployed__c.field-meta.xml
<CustomField>
    <fullName>Kiosk_functionality_deployed__c</fullName>
    <label>Kiosk - functionality deployed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bill Pay</fullName>
            </value>
            <value>
                <fullName>Deli ordering</fullName>
            </value>
            <value>
                <fullName>Endless Aisle</fullName>
            </value>
            <value>
                <fullName>Food Ordering</fullName>
            </value>
            <value>
                <fullName>Gift Registry</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Loyalty Registration</fullName>
            </value>
            <value>
                <fullName>Money Center</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>