force-app/main/default/objects/Industry_Profile__c/fields/Kiosk_HW_Break_Fix__c.field-meta.xml
<CustomField>
    <fullName>Kiosk_HW_Break_Fix__c</fullName>
    <label>Kiosk HW Break/Fix</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Friendlyway</fullName>
            </value>
            <value>
                <fullName>Fujitsu</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>Kiosk</fullName>
            </value>
            <value>
                <fullName>Meridan</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PAR</fullName>
            </value>
            <value>
                <fullName>Radiant</fullName>
            </value>
            <value>
                <fullName>Wincor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>