force-app/main/default/objects/Industry_Profile__c/fields/Kiosk_Services_Provider__c.field-meta.xml
<CustomField>
    <fullName>Kiosk_Services_Provider__c</fullName>
    <label>Kiosk Services Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aurillion</fullName>
            </value>
            <value>
                <fullName>Clearwave</fullName>
            </value>
            <value>
                <fullName>D2</fullName>
            </value>
            <value>
                <fullName>Dyna</fullName>
            </value>
            <value>
                <fullName>Epic</fullName>
            </value>
            <value>
                <fullName>In House</fullName>
            </value>
            <value>
                <fullName>KioHealth</fullName>
            </value>
            <value>
                <fullName>McKesson</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>otech</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Phreesia</fullName>
            </value>
            <value>
                <fullName>Vecna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>