force-app/main/default/objects/Industry_Profile__c/fields/Kiosk_Systems__c.field-meta.xml
<CustomField>
    <fullName>Kiosk_Systems__c</fullName>
    <label>Kiosk Systems</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>NCR Kiosk</fullName>
            </value>
            <value>
                <fullName>Radiant</fullName>
            </value>
            <value>
                <fullName>Retalix 10</fullName>
            </value>
            <value>
                <fullName>Retalix StorePoint</fullName>
            </value>
            <value>
                <fullName>Xpediant</fullName>
            </value>
            <value>
                <fullName>Not Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>