force-app/main/default/objects/Industry_Profile__c/fields/Labor_Management__c.field-meta.xml
<CustomField>
    <fullName>Labor_Management__c</fullName>
    <label>Labor Management</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aldata</fullName>
            </value>
            <value>
                <fullName>Catalyst</fullName>
            </value>
            <value>
                <fullName>High Jump</fullName>
            </value>
            <value>
                <fullName>Infor (Daly &amp; Wolcott)</fullName>
            </value>
            <value>
                <fullName>Infor (NxTrend)</fullName>
            </value>
            <value>
                <fullName>Manhattan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Red Prairie</fullName>
            </value>
            <value>
                <fullName>Retalix Triceps</fullName>
            </value>
            <value>
                <fullName>Retalix Warehousing</fullName>
            </value>
            <value>
                <fullName>Not Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>