force-app/main/default/objects/Industry_Profile__c/fields/Loyalty_Application_Maintenance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Application_Maintenance_Provider__c</fullName>
    <label>Loyalty Application Maintenance Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>Retalix</fullName>
            </value>
            <value>
                <fullName>VRMS</fullName>
            </value>
            <value>
                <fullName>You Technology</fullName>
            </value>
            <value>
                <fullName>Zavers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>