force-app/main/default/objects/Industry_Profile__c/fields/Loyalty_Card_Provider__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Card_Provider__c</fullName>
    <inlineHelpText>Please provide name of loyalty card provider, if applicable</inlineHelpText>
    <label>Loyalty Card Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>